/*
 * MIT License
 *
 * Copyright (c) 2019 - 2022 W3C Solid Community Group
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package org.solid.testharness.reporting;

import org.eclipse.rdf4j.model.IRI;
import org.solid.common.vocab.EARL;
import org.solid.testharness.utils.DataModelBase;

import java.util.List;

public class Assertion extends DataModelBase {
    private TestResult testResult;

    public Assertion(final IRI subject) {
        super(subject, ConstructMode.DEEP);
        final List<TestResult> results = getModelList(EARL.result, TestResult.class);
        if (results != null) {
            testResult = results.get(0);
        }
    }

    public String getAssertedBy() {
        return getIriAsString(EARL.assertedBy);
    }

    public String getTest() {
        return getIriAsString(EARL.test);
    }

    public String getTestSubject() {
        return getIriAsString(EARL.subject);
    }

    public String getMode() {
        return getIriAsString(EARL.mode);
    }

    public TestResult getResult() {
        return testResult;
    }

    public boolean isFailed() {
        return testResult.isFailed();
    }

    public boolean isPassed() {
        return testResult.isPassed();
    }
}
